--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "themes/PaperMod"]
 	path = themes/PaperMod
 	url = https://github.com/NickS55/hugo-PaperMod
+[submodule "themes/PaperMod2"]
+	path = themes/PaperMod2
+	url = https://github.com/NickS55/hugo-PaperMod
+[submodule "themes/PaperMod3"]
+	path = themes/PaperMod3
+	url = https://github.com/NickS55/hugo-PaperMod
